[package]
name = "velatus"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "velatus"
crate-type = ["cdylib"]

[dependencies]
aho-corasick = "1.1.3"
log = "0.4.27"
pyo3 = "0.29.0"
pyo3-log = "0.13.3"

[lints.rust]
missing_docs = "deny"

[lints.clippy]
missing_docs_in_private_items = "deny"
missing_errors_doc = "deny"
missing_panics_doc = "deny"
