[package]
name = "velatus"
version = "0.0.0"
edition = "2024"
license = "MIT"

[lib]
name = "velatus"
crate-type = ["cdylib"]

[dependencies]
aho-corasick = "1"
log = "0.4"
pyo3 = "0.29"
pyo3-log = "0.13"

[lints.rust]
missing_docs = "deny"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_docs_in_private_items = "deny"
missing_errors_doc = "deny"
missing_panics_doc = "deny"
